[package]
name = "degen_toon_water"
version = "0.1.2"
license = "MIT"
description = "A toon water shader for bevy"
edition = "2021" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["tga"] }
 

bevy_common_assets = { version = "0.10", features = ["ron", "toml"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8.1"


[[example]]
name = "basic"
path = "examples/basic.rs"

 