[package]
name = "degen_toon_water"
version = "0.13.2"
license = "MIT"
description = "A toon water shader for bevy"
edition = "2021" 

 

[dependencies]
bevy = { version = "0.13.2", features = ["tga"] }
 

bevy_common_assets = { version = "0.10", features = ["ron", "toml"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8.1"
bevy_shader_utils = "0.7.0"


[[example]]
name = "basic"
path = "examples/basic.rs"

 
